fluxcd/infrastructure/configs/overlays/production/adguard/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: prplanit-dns
spec:
  template:
    spec:
